force-app/main/default/objects/SCMImpToolsLoad_Inventory__c/SCMImpToolsLoad_Inventory__c.object-meta.xml
<CustomObject>
    <description>This object is used as a staging table to do an initial load into inventory.  This is not part of the SCM package but is part of the toolkit to do the implementation</description>
    <label>Load Inventory</label>
    <nameField>
        <displayFormat>LI-{000000}</displayFormat>
        <label>LoadInventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Load Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>