force-app/main/default/objects/SCMImpToolsLoad_Inventory__c/fields/Condition_Code__c.field-meta.xml
<CustomField>
    <fullName>Condition_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condition Code</label>
    <referenceTo>SCMC__Condition_Code__c</referenceTo>
    <relationshipLabel>LoadInventory</relationshipLabel>
    <relationshipName>LoadInventory</relationshipName>
    <type>Lookup</type>
</CustomField>