force-app/main/default/objects/SCMImpToolsLoad_Inventory__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates there is a problem with this load</inlineHelpText>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>