force-app/main/default/objects/SCMImpToolsLoad_Inventory__c/fields/Item_Master__c.field-meta.xml
<CustomField>
    <fullName>Item_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Refernce to the item master for this item</inlineHelpText>
    <label>Item Master</label>
    <referenceTo>SCMC__Item__c</referenceTo>
    <relationshipLabel>LoadInventory</relationshipLabel>
    <relationshipName>LoadInventory</relationshipName>
    <type>Lookup</type>
</CustomField>