force-app/main/default/objects/SCMImpToolsLoad_Inventory__c/fields/Loaded__c.field-meta.xml
<CustomField>
    <fullName>Loaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true when this is loaded into inventory</inlineHelpText>
    <label>Loaded</label>
    <type>Checkbox</type>
</CustomField>