force-app/main/default/objects/SCMImpToolsLoad_Inventory__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The lot number associated with the donation.</inlineHelpText>
    <label>Lot Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>