force-app/main/default/objects/SCMImpToolsLoad_Inventory__c/fields/Ownership_Code__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Reference to the ownership code for this item</inlineHelpText>
    <label>Ownership Code</label>
    <referenceTo>SCMC__Ownership_Code__c</referenceTo>
    <relationshipLabel>LoadInventory</relationshipLabel>
    <relationshipName>LoadInventory</relationshipName>
    <type>Lookup</type>
</CustomField>