force-app/main/default/objects/SCMImpToolsLoad_Inventory__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>Quantity of the item</inlineHelpText>
    <label>Quantity</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>