force-app/main/default/objects/SCMImpToolsLoad_Inventory__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Reference to reason code for this adjustment</inlineHelpText>
    <label>Reason Code</label>
    <referenceTo>SCMC__Reason_Code__c</referenceTo>
    <relationshipLabel>LoadInventory</relationshipLabel>
    <relationshipName>LoadInventory</relationshipName>
    <type>Lookup</type>
</CustomField>