force-app/main/default/objects/SCMImpToolsLoad_Inventory__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Serial Number for a serialized part</inlineHelpText>
    <label>Serial Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>