force-app/main/default/objects/SCMImpToolsLoad_Inventory__c/fields/Unit_cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_cost__c</fullName>
    <inlineHelpText>Unit cost of the items being loaded.</inlineHelpText>
    <label>Unit cost</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>