force-app/main/default/objects/SCMImpToolsLoad_Inventory__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Reference to unit of measure table.</inlineHelpText>
    <label>Unit of Measure</label>
    <referenceTo>SCMC__Unit_of_Measure__c</referenceTo>
    <relationshipLabel>LoadInventory</relationshipLabel>
    <relationshipName>LoadInventory</relationshipName>
    <type>Lookup</type>
</CustomField>