force-app/main/default/objects/SCMImpToolsLoad_Inventory__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The warehouse to store the inventory</inlineHelpText>
    <label>Warehouse</label>
    <length>25</length>
    <type>Text</type>
</CustomField>